--- a/index.html
+++ b/index.html
@@ -1,12 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./index.css"/>
-</head>
-<body>
-    This is a paage
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Akshay Kumar - Web Developer</title>
+    <link rel="stylesheet" href="./index.css" />
+  </head>
+  <script src="./index.js"></script>
+  <body>
+    <header>
+      <div id="smBlock">
+        <h1 id="clickToggle">☰</h1>
+        <ul id="navSm">
+            <li><a href="#about">About</a></li>
+            <li><a href="#tech">Technologies</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><button id="switch">☀️</button></li>
+          </ul>
+      </div>
+      <h1 id="nameSm">Akshay</h1>
+      <ul id="nav">
+        <li><a href="#about">About</a></li>
+        <li><a href="#tech">Technologies</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><button id="switch">☀️</button></li>
+      </ul>
+    </header>
+
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          Hey! I'm
+          <a href="https://www.github.com/aksh-mon" target="_blank">Akshay</a>,
+          a full-stack web developer. I started my coding journey in 2021 and
+          have been building skills ever since.
+        </p>
+        <p>Here’s what I’ve learned so far:</p>
+        <ul>
+          <li><strong>HTML</strong> – For structuring web pages</li>
+          <li><strong>CSS</strong> – To style and beautify them</li>
+          <li><strong>JavaScript</strong> – To make them interactive</li>
+        </ul>
+        <p>
+          I then moved on to modern frameworks to improve development speed:
+        </p>
+        <ul>
+          <li><strong>React</strong></li>
+          <li><strong>Next.js</strong></li>
+          <li><strong>Vue.js</strong></li>
+          <li><strong>Ext.js</strong></li>
+        </ul>
+        <p>
+          After mastering front-end frameworks, I explored the backend (which
+          honestly felt easier to grasp!).
+        </p>
+      </section>
+
+      <section id="tech">
+        <h2>Technologies I Use</h2>
+        <h3>Backend</h3>
+        <ul>
+          <li><strong>Node.js</strong></li>
+          <li><strong>NGINX</strong></li>
+          <li><strong>Apache</strong></li>
+        </ul>
+
+        <h3>Databases</h3>
+        <ul>
+          <li><strong>PostgreSQL</strong></li>
+          <li><strong>MySQL</strong></li>
+          <li><strong>MongoDB</strong></li>
+        </ul>
+
+        <h3>CMS Platforms</h3>
+        <ul>
+          <li><strong>WordPress</strong></li>
+          <li><strong>Shopify</strong></li>
+        </ul>
+
+        <h3>Currently Exploring</h3>
+        <p>I'm learning:</p>
+        <ul>
+          <li><strong>Java</strong> – for data science</li>
+          <li>
+            <strong>Python</strong> – for rapid development and fun projects
+          </li>
+          <li><strong>C++</strong> – for performance-based systems</li>
+        </ul>
+      </section>
+
+      <section id="contact">
+        <h2>Looking for Work</h2>
+        <p>
+          I’m currently open to remote jobs or paid freelance work related to
+          web development. I’m reliable, eager to contribute, and passionate
+          about clean code. Even Working on building games usually started with
+          js made some 2d games
+        </p>
+        <p><strong>Available for freelance and full-time roles.</strong></p>
+        <p>
+          📧 Email me:
+          <a href="mailto:akshay4444.ak@gmail.com">akshay4444.ak@gmail.com</a>
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2025 Akshay Kumar. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
