--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#tech">Technologies</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><button id="switch">☀️</button></li>
+        <li><button id="switch">🌚</button></li>
       </ul>
     </header>
 
