--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#tech">Technologies</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><button id="switch">☀️</button></li>
+            <li><button class="switch">☀️</button></li>
           </ul>
       </div>
       <h1 id="nameSm">Akshay</h1>
@@ -23,7 +23,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#tech">Technologies</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><button id="switch">🌚</button></li>
+        <li><button class="switch">🌚</button></li>
       </ul>
     </header>
 
@@ -111,3 +111,4 @@
     </footer>
   </body>
 </html>
+
